--- a/src/template.html
+++ b/src/template.html
@@ -10,9 +10,70 @@
     <div class="container">
 
         <div class="dashboard">
-            <button id="home">HOME</button>
-            <button id="today">TODAY</button>
+            <button id="tasks">Tasks</button>
+            <button id="projects">Projects</button>
         </div>
+
+        <!-- These next two elements are my dialogs that will appear when i press on the add task and add project button -->
+        <dialog class="task-dialog">
+            <div class="task-dialog-container">
+                <div class="task-form-container">
+                    <form>
+                        <ul>
+                            <li>
+                                <label for="title">Title:</label>
+                                <input type="text" id="title" required>
+                            </li>
+                            <li>
+                                <label for="description">Description:</label>
+                                <input type="text" id="description" required>
+                            </li>
+                            <li>
+                                <label for="dueDate">Due date:</label>
+                                <input type="date" id="dueDate" required>
+                            </li>
+                            <li>
+                                <h4>Choose Priority Level:</h4>
+                                <label>
+                                    <input type="radio" name="priority" value="Low"> Low
+                                </label>
+                                <label>
+                                    <input type="radio" name="priority" value="Medium"> Medium
+                                </label>
+                                <label>
+                                    <input type="radio" name="priority" value="High"> High
+                                </label>
+                                
+                            </li>
+                        </ul>
+                    </form>
+                </div>
+                <button class="task-confirm-dialog">Confirm</button>
+                <button class="task-close-dialog">Cancel</button>
+            </div>
+        </dialog>
+
+        <dialog class="project-dialog">
+            <div class="project-dialog-container">
+                <div class="project-form-container">
+                    <form>
+                        <ul>
+                            <li>
+                                <label for="title">Title:</label>
+                                <input type="text" id="title" required>
+                            </li>
+                            <li>
+                                <label for="description">Description:</label>
+                                <input type="text" id="description" required>
+                            </li>
+                        </ul>
+                    </form>
+                </div>
+                <button class="project-confirm-dialog">Confirm</button>
+                <button class="project-close-dialog">Cancel</button>
+            </div>
+        </dialog>
+
 
         <div class="main"></div>
         
