--- a/src/template.html
+++ b/src/template.html
@@ -19,20 +19,28 @@
             <div class="task-dialog-container">
                 <div class="task-form-container">
                     <form>
+                        <h3>ADD TASK</h3>
                         <ul>
+                            <!-- <li>
+                                <h3>ADD TASK</h3>
+                            </li> -->
                             <li>
                                 <label for="title">Title:</label>
                                 <input type="text" id="title" required>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <label for="description">Description:</label>
                                 <input type="text" id="description" required>
+                            </li> -->
+                            <li>
+                                <label for="description">Description:</label>
+                                <textarea id="description" name="description" rows="4" required></textarea>
                             </li>
                             <li>
                                 <label for="dueDate">Due date:</label>
                                 <input type="date" id="dueDate" required>
                             </li>
-                            <li>
+                            <li class="priority">
                                 <h4>Choose Priority Level:</h4>
                                 <label>
                                     <input type="radio" name="priority" value="Low"> Low
@@ -57,14 +65,22 @@
             <div class="project-dialog-container">
                 <div class="project-form-container">
                     <form>
+                        <h3>ADD PROJECT</h3>
                         <ul>
+                            <!-- <li>
+                                <h3>ADD PROJECT</h3>
+                            </li> -->
                             <li>
                                 <label for="title">Title:</label>
                                 <input type="text" id="title" required>
                             </li>
+                            <!-- <li>
+                                <label for="description">Description:</label>
+                                <input type="text"id="description" required>
+                            </li> -->
                             <li>
                                 <label for="description">Description:</label>
-                                <input type="text" id="description" required>
+                                <textarea id="description" name="description" rows="4" required></textarea>
                             </li>
                         </ul>
                     </form>
@@ -74,9 +90,8 @@
             </div>
         </dialog>
 
-
+        <div id="header"></div>
         <div class="main"></div>
-        
     </div>
     
 </body>
